# UniGaze

./: .gitignore  README.md  requirements.txt
MAE/: models_mae_gaze_aware.py
docs/: index.html
gazedata_preparation/: .gitignore  gazelib_interface.py  normalize_eyediap.py  normalize_gaze360.py  normalize_mpii.py  normalize_xgaze.py  readme.md
unigaze/: predict_gaze_video.py
unigaze/configs/loss/: angular_loss.yaml  combined_loss.yaml  uncertainty_loss.yaml
unigaze/configs/model/: mae_b_16_gaze_multi_scale.yaml  mae_b_16_gaze_uncertainty.yaml
unigaze/criteria/: gaze_loss.py
unigaze/models/vit/: domain_adaptive_gaze.py  mae_gaze.py  multi_scale_gaze_head.py  uncertainty_gaze_head.py
unigaze/trainers/: simple_trainer.py
unigaze_easy/: README.md  pyproject.toml
unigaze_easy/src/unigaze/: __init__.py  loader.py
unigaze_easy/src/unigaze.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
unigaze_easy/src/unigaze/models/: mae.py  mae_gaze.py
